new lines are added

--- a/SelectorDemo.htm
+++ b/SelectorDemo.htm
@@ -72,6 +72,9 @@ a:hover
     <p>
     <div>
         <span> i am span demo </span>
+        <span> i am span demo </span>
+        <span> i am span demo </span>
+
     </div>
     </p>
 
